--- a/.github/workflows/url-collection.yml
+++ b/.github/workflows/url-collection.yml
@@ -7,99 +7,129 @@ on:
         description: 'Target domain (e.g., example.com)'
         required: true
         type: string
-  workflow_call:
-    inputs:
-      domain:
-        required: true
-        type: string
 
 jobs:
-  collect-urls:
+  # Job 1: Passive enumeration with waybackurls
+  passive-wayback:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install Go tools
+      - name: Install waybackurls
         run: |
           go install github.com/tomnomnom/waybackurls@latest
-          go install github.com/lc/gau/v2/cmd/gau@latest
-          go install github.com/tomnomnom/unfurl@latest
-          go install github.com/tomnomnom/anew@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
 
-      - name: Collect URLs
+      - name: Run waybackurls
         run: |
           DOMAIN="${{ inputs.domain }}"
-          echo "🔍 Collecting URLs for: $DOMAIN"
+          mkdir -p waybackurls-results
           
-         # Create test URLs as fallback
-          echo "https://$DOMAIN" > all-raw-urls.txt
-          echo "https://$DOMAIN/?q=test" >> all-raw-urls.txt
-          echo "https://$DOMAIN/search?query=test" >> all-raw-urls.txt
+          export PATH="$HOME/go/bin:$PATH"
+          echo "$DOMAIN" | waybackurls > waybackurls-results/waybackurls.txt || touch waybackurls-results/waybackurls.txt
           
-          # Collect from wayback with timeout
-          echo "📡 Running waybackurls..."
-          timeout 300 waybacurls $DOMAIN 2>/dev/null | head -2000 | anew all-raw-urls.txt || true
+          # Add fallback URLs
+          echo "https://${DOMAIN}/" >> waybackurls-results/waybackurls.txt
+          echo "https://www.${DOMAIN}/" >> waybackurls-results/waybackurls.txt
+          echo "https://${DOMAIN}/admin" >> waybackurls-results/waybackurls.txt
+          echo "https://${DOMAIN}/login" >> waybackurls-results/waybackurls.txt
           
-          # Collect from gau with timeout
-          echo "📡 Running gau..."
-          timeout300 gau $DOMAIN --subs --threads 5 2>/dev/null | head -2000 | anew all-raw-urls.txt || true
-          
-          # Filter out unwanted extensions
-          EXTS="json|js|css|png|jpg|jpeg|gif|svg|woff|woff2|ttf|eot|ico|pdf|zip|rar|tar|gz|mp3|mp4|avi|mov|wmv|flv|webm|webp"
-          
-          cat all-raw-urls.txt | \
-          grep -iEv "\.($EXTS)(\?|$)" | \
-          grep -E "^https?://" | \
-          sort -u > all-clean-urls.txt
-          
-          # Separate dynamic and static URLs
-          grep "\?" all-clean-urls.txt > dynamic-urls.txt || echo "https://$DOMAIN/?q=test" > dynamic-urls.txt
-          grep -v "\?" all-clean-urls.txt | head -500 > static-urls.txt || echo "https://$DOMAIN" > static-urls.txt
-          
-          # Extract parameters
-          unfurl -u keys < dynamic-urls.txt | sort -u > params.txt || echo -e "q
-query
-search
-id
-page
-test" > params.txt
-          
-          # Summary
-          echo "✅ URL Collection Summary:"
-          echo "- Total clean URLs: $(wc -l < all-clean-urls.txt)"
-          echo "- Dynamic URLs: $(wc -l < dynamic-urls.txt)"
-          echo "- Static URLs: $(wc -l < static-urls.txt)"
-          echo "- Unique parameters: $(wc -l < params.txt)"
+          echo "Found $(wc -l < waybackurls-results/waybackurls.txt) URLs"
 
-      - name: Upload URL collection
+      - name: Upload waybackurls results
         uses: actions/upload-artifact@v4
         with:
-          name: url-collection-${{ github.run_id }}
-          retention-days: 1
-          path: |
-            all-raw-urls.txt
-            all-clean-urls.txt
-            dynamic-urls.txt
-            static-urls.txt
-            params.txt
+          name: wayback-results
+          path: waybackurls-results/
 
-  trigger-scanning:
-    needs: collect-urls
+  # Job 2: GAU enumeration
+  passive-gau:
     runs-on: ubuntu-latest
     steps:
-      - name: Trigger scanning workflow
-        uses: actions/github-script@v7
+      - name: Install GAU
+        run: |
+          go install github.com/lc/gau/v2/cmd/gau@latest
+          echo "$(go env GOPATH)/bin" >> $GITHUB_PATH
+
+      - name: Run GAU
+        run: |
+          DOMAIN="${{ inputs.domain }}"
+          mkdir -p gau-results
+          
+          export PATH="$HOME/go/bin:$PATH"
+          timeout 300 gau "$DOMAIN" --threads 5 --subs > gau-results/gau.txt || touch gau-results/gau.txt
+          
+          # Add test URLs
+          echo "https://${DOMAIN}/search?q=test" >> gau-results/gau.txt
+          echo "https://${DOMAIN}/page?id=1" >> gau-results/gau.txt
+          
+          echo "Found $(wc -l < gau-results/gau.txt) URLs"
+
+      - name: Upload GAU results
+        uses: actions/upload-artifact@v4
         with:
-          script: |
-            await github.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: '2-scanning.yml',
-              ref: 'main',
-              inputs: {
-                domain: '${{ inputs.domain }}',
-                run_id: '${{ github.run_id }}'
-              }
-            });
-            console.log('Triggered scanning workflow');
+          name: gau-results
+          path: gau-results/
+
+  # Job 3: Combine and clean URLs
+  combine-results:
+    needs: [passive-wayback, passive-gau]
+    runs-on: ubuntu-latest
+    outputs:
+      total-urls: ${{ steps.count.outputs.total }}
+      dynamic-urls: ${{ steps.count.outputs.dynamic }}
+    steps:
+      - name: Download results
+        uses: actions/download-artifact@v4
+        with:
+          merge-multiple: true
+
+      - name: Combine and filter URLs
+        run: |
+          mkdir -p final-results
+          
+          # Combine all URLs
+          cat waybackurls-results/waybackurls.txt gau-results/gau.txt > all-raw-urls.txt
+          
+          # Filter out unwanted extensions
+          grep -viE '\.(css|js|jpg|jpeg|png|svg|gif|pdf|zip|exe)($|\?)' all-raw-urls.txt | sort -u > all-clean-urls.txt
+          
+          # Separate static and dynamic URLs
+          grep -v '?' all-clean-urls.txt > static-urls.txt || touch static-urls.txt
+          grep '?' all-clean-urls.txt > dynamic-urls.txt || touch dynamic-urls.txt
+          
+          # Extract parameters
+          grep '?' all-clean-urls.txt | sed 's/.*?//' | sed 's/&/
+/g' | sed 's/=.*//' | sort -u > params.txt
+          
+          # Add common parameters
+          cat >> params.txt << 'EOF'
+          id
+          q
+          search
+          page
+          user
+          redirect
+          callback
+          url
+          EOF
+          sort -u params.txt -o params.txt
+          
+          # Move to final results
+          cp all-raw-urls.txt all-clean-urls.txt static-urls.txt dynamic-urls.txt params.txt final-results/
+
+      - name: Count URLs
+        id: count
+        run: |
+          TOTAL=$(wc -l < all-clean-urls.txt)
+          DYNAMIC=$(wc -l < dynamic-urls.txt)
+          echo "total=$TOTAL" >> $GITHUB_OUTPUT
+          echo "dynamic=$DYNAMIC" >> $GITHUB_OUTPUT
+          echo "Total URLs: $TOTAL, Dynamic URLs: $DYNAMIC"
+
+      - name: Upload final results
+        uses: actions/upload-artifact@v4
+        with:
+          name: url-collection-results
+          path: final-results/
